[workspace]
resolver = "2"

members = [
    "control",
    "logging"
]

[profile.release]
# terminate process on panic
panic = "abort"

[profile.dev]
opt-level = 1
# terminate process on panic
panic = 'abort'

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = false
